--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Practicedemo</h1>
-      <h2 class="project-tagline">练习</h2>
+      <h2 class="project-tagline">练习 text</h2>
       <a href="https://github.com/zhuhao-camera360/PracticeDemo" class="btn">View on GitHub</a>
       <a href="https://github.com/zhuhao-camera360/PracticeDemo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/zhuhao-camera360/PracticeDemo/tarball/master" class="btn">Download .tar.gz</a>
